# EEGPhasePredictor-fabric

./: .gitignore  Guide.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup_env.sh
data/: __init__.py
logs/: __init__.py
src/eegpp/: __init__.py  dataloader.py  dataset.py  inference.py  logger.py  params.py  trainer.py  visualization.py
src/eegpp/configs/: __init__.py  fftcnn1dnc_config.yml  ffttransnc_config.yml  stftcnn1dnc_config.yml  stfttransnc_config.yml  transformer_config.yml
src/eegpp/models/: cnn1d2c.py  fft2c.py  fft_2c_Wout.py  fftcnn1dnc.py  ffttransnc.py  stft2c.py  stftcnn1dnc.py  stfttransnc.py  wtcnn1dnc.py  wtresnet1dnc.py
src/eegpp/models/baseline/: cnn1d.py  cnn_model.py  fft_model.py  resnet.py  transformer.py
src/eegpp/utils/: callback_utils.py  config_utils.py  data_utils.py  general_utils.py  model_utils.py
src/eegpp2/: __init__.py  __main__.py  dataloader.py  dataset.py  inference.py  logger.py  overwrite_template.py  params.py  trainer.py  trainer_backup.py  visualization.py
src/eegpp2/configs/: __init__.py  cnn1d_config.yml  stftcnn1dnc_config.yml  transformer_config.yml  wtcnn1dnc_config.yml  wtresnet501dnc_config.yml
src/eegpp2/data/: __init__.py
src/eegpp2/models/: cnn1d2c.py  fft2c.py  fftcnn1dnc.py  ffttransnc.py  stft2c.py  stftcnn1dnc.py  stfttransnc.py  wtcnn1dnc.py  wtresnet1dnc.py
src/eegpp2/models/baseline/: cnn1d.py  fft.py  transformer.py
src/eegpp2/utils/: common_utils.py  config_utils.py  data_utils.py  model_utils.py
